[Misc] Moved functional HTMLExportIT test to a docker-based test